src/App.css
/* ================= Globals ================= */
* {
	box-sizing: border-box;
}

/* ================= Colors ================= */
.white-background {
	background: #FFFFFF;
}

.pink-background {
	background: #FFD1E8;
}

.grey-background {
	background: #F4F4F4;
}

.blue-background {
	background: #F3F9FF;
}

/* ================= Layout ================= */
.background {
	width: 100vw;
	height: 100%;
	background: #838080;
}

.container {
	width: 1440px; 
	display: flex;
	flex-direction: column; 
	position: relative;
}

/* ================= Main-view ============== */
.main-view {
	height: 655.22px;
	display: flex;
} 

/* ======= Main View Left */
.main-view-left {
	width: 525.12px;
	padding-top: 236.29px;
	padding-left: 86.53px;
}

.main-view-left h2 {
	font-family: Noto-Sans, sans-serif;
	font-weight: 700;
	font-size: 56px;
	line-height: 76.27px;
}

/* ======= Main View Right */
.main-view-right {
	width: 914.8px;
	background-image: url('./imgs/background-image.jpg');
	background-size: cover;
	z-index: 0;
	padding-top: 100px;
} 

/* Option Buttons */
.option-buttons {
	display: flex;
	margin-left: 315.88px;
	margin-top: 55.37px;
}

.option-button {
	background: transparent;
	border: none;

	width: 124.42px; 
	padding-bottom: 16px;
	display: flex;
	justify-content: center;  

	font-family: Noto-Sans, sans-serif;
	font-style: SemiBold;
	font-size: 22px;
	font-weight: 600;
	line-height: 30px;
	color: #FFFFFF;
	opacity: 0.5;
} 

.option-button:hover {
	cursor: pointer;
}

.option-button-selected  {
	border-bottom: 1.5px solid #CFE5FF;
 	opacity: 1;
}

/* Option Info */
.options-info {
	margin-left: 180px;
	margin-right: 180px;
	margin-top: 29.36px;
	display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.option-info {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.option-number {
	font-family: Noto-Sans, sans-serif;
	font-style: bold;
	font-size: 64px;
	line-height: 87px;
	color: #CFE5FF;
} 

.option-text {
	font-family: Noto-Sans, sans-serif;
	font-style: regular;
	font-size: 20px;
	line-height: 27px;
	color: #FFFFFF;
	text-align: center;
}
  
/* ================= Alert-view ============= */
.alert-bar {
	height: 112px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.alert-bar p {
	font-family: Noto-Sans, sans-serif;
	font-size: 24px;
	line-height: 33px; 
	color: #181949;
}

.alert-bar p em {
	font-weight: 600;
}

/* ================= Icon-views ============= */
.icon-view {
	display: flex; 
  align-items: center;
  flex-direction: row; 
  justify-content: space-between;
	height: 405.75px;
	width: 100%;
} 

.icon-view-wide {
	padding-left: 209px;
  padding-right: 360px;
}

.icon-view-slim {  
	padding-left: 366px;
	padding-right: 439px;
}

.screen-icon {
	width: 280px;
	height: 234.84px;
}

.info-box { 
	display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.info-box-heading {
	font-family: Manrope, sans-serif;
	font-weight: 700;
 	font-size: 32px;
 	line-height: 44px; 
	color: #181949;
	margin-bottom: 16px;
}

.info-box-text {
	font-family: Noto-Sans, sans-serif;
	font-size: 16px; 
	line-height: 22px; 
	color: #666666;
	margin-bottom: 16px;
}

.info-button {
	width: 89px;
	height: 32px;
	border-radius: 8px;
	background: #181949;
	border: none;

	font-family: Noto-Sans-Semi-Bold, sans-serif;
	font-weight: 600;
	font-size: 16px;
	line-height: 16px; 
	color: #FFFFFF;
}

.info-box-container {
	display: flex;   
}

.info-box-row {
	display: flex;
	text-align: center;
}

/* === IT-cloud-view */
.icon-view-title-container {
	font-family: Noto-Sans, sans-serif;
	font-size: 48px;
	line-height: 65px;
	font-weight: 700;
	color: #181949;  
	text-align: center;
	padding-top: 45px;
}

.hr-admin-view .info-box-row-1 .info-button-container {
	margin-right: 32px;
}

.hr-admin-view .info-box-row-1 .info-button-container:last-child {
	margin-right: 0;
}

.hr-admin-view .info-box-row-2 {
	margin-top: 18.15px;
} 

/* ================= Options-view =========== */
.options-view {
	height: 487.06px;
}

.offices-view {
	border-top: 1px solid #999999;
	height: 320px;
}

